--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   card_swiper: ^3.0.1
   flutter_dotenv: ^5.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
