--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   card_swiper: ^3.0.1
   flutter_dotenv: ^5.1.0
   http: ^1.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
